chore: add tasks for ktlint
tasks for ktlint and copy shell scripts to git prepush

Fixed #8