@@ -1,4 +1,5 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import org.apache.tools.ant.taskdefs.condition.Os
 
 plugins {
     id("org.springframework.boot") version PluginVersions.SPRING_BOOT_VERSION
@@ -67,3 +68,52 @@ tasks.withType<KotlinCompile> {
 tasks.withType<Test> {
     useJUnitPlatform()
 }
+
+val outputDir = "${project.buildDir}/reports/ktlint/"
+val inputFiles = project.fileTree(mapOf("dir" to "src", "include" to "**/*.kt"))
+
+// Checking lint
+val ktlintCheck by tasks.creating(JavaExec::class) {
+    inputs.files(inputFiles)
+    outputs.dir(outputDir)
+
+    description = "Check Kotlin code style."
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    args = listOf("src/**/*.kt")
+}
+
+// Formatting all source files
+val ktlintFormat by tasks.creating(JavaExec::class) {
+    inputs.files(inputFiles)
+    outputs.dir(outputDir)
+
+    description = "Fix Kotlin code style deviations."
+    classpath = ktlint
+    mainClass.set("com.pinterest.ktlint.Main")
+    args = listOf("-F", "src/**/*.kt")
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
+}
+
+val installGitHook by tasks.creating(Copy::class) {
+
+    description = "Install git hook to root project."
+
+    var suffix = "macos"
+    if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+        suffix = "windows"
+    }
+
+    val sourceDir = File(rootProject.rootDir, "pre-build/scripts/pre-push-$suffix")
+    val targetDir = File(rootProject.rootDir, ".git/hooks")
+
+    from(sourceDir)
+    into(targetDir)
+    rename("pre-push-$suffix", "pre-push")
+
+    fileMode = 0b111101101
+}
+
+project.tasks
+    .getByName("build")
+    .dependsOn(":installGitHook")
